findutils (4.4.2-2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Andreas Metzler <ametzler@debian.org>  Sat, 06 Jun 2009 17:14:58 +0200

findutils (4.4.2-1) unstable; urgency=low

  * debian/locate-cron.daily: Test if called by root. (Thank's, Michael Vogt).
    Closes: #526939
  * New upstream version.
    + find -prune now makes sure it has valid stat() information.
      Closes: #527584
    + Drop patches/10_typo_525263.dpatch, included upstream.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 06 Jun 2009 16:56:11 +0200

findutils (4.4.1-1) unstable; urgency=low

  * New upstream maintenance release.
    + Drop 10_unnecessary_tempfile.dpatch, applied upstream.
    + Drops duplicate filesystem proc in PRUNEFS. Closes: #518120
    + Correct code for displaying \0 in find.1. Closes: #476218
    + Updates documentation for find -perm /mode. Closes: #478005
  * Standards-Version 3.8.1.
    + Add support for DEB_BUILD_OPTIONS=nocheck.
  * Use filter instead of findstring when checking for
    DEB_BUILD_OPTIONS=noopt.
  * Fix typo "diagnositcs" in docs. Closes: #525263
  * Update copyright stanza in debian/copyright.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 25 Apr 2009 10:13:14 +0200

findutils (4.4.0-3) unstable; urgency=low

  * Selective pull from Ubuntu:
    - Change version check in findutils preinst from "$2" le-nl "4.2.31-1"
      to "$2" lt-nl "4.2.31-2". This check correctly catches the respective
      ubuntu or backport versions.
    - add /var/lib/schroot/mount to PRUNEPATHS.
  * Add ocfs2 to PRUNEFS. Closes: #516776
  * Standards-Version 3.8.0. No changes required.
  * Clean up build system.
    + Stop setting INSTALL_PROGRAM += -s on DEB_BUILD_OPTIONS=nostrip in
      debian/rules.
    + Remove old commented commands.
    + Switch to debhelper v7. (Use dh_prep instead of dh_clean -k).

 -- Andreas Metzler <ametzler@debian.org>  Sun, 01 Mar 2009 18:27:17 +0100

findutils (4.4.0-2) unstable; urgency=low
