@@ -74,8 +74,6 @@ install: build
 
 	# Add here commands to install the package into debian/findutils.
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-	install -m755 $(CURDIR)/debian/locate-cron.daily \
-		$(CURDIR)/debian/locate/etc/cron.daily/locate
 	install -m755 $(CURDIR)/debian/tmp/usr/bin/updatedb \
 		$(CURDIR)/debian/locate/usr/bin/updatedb.findutils
 	install -m755 $(CURDIR)/debian/tmp/usr/bin/locate \
@@ -97,8 +95,7 @@ binary-arch: build install
 	dh_installdocs
 	dh_installexamples
 	dh_install
-#	# we have to install the cron script manually, it has the wrong filename
-#	dh_installcron
+	dh_installcron
 	dh_installinfo
 	dh_installman
 	dh_link
